# ds4se

./: .gitignore  CONTRIBUTING.md  README.md  config.py  glossary.md  pyproject.toml  requirements.txt
01_intro/: index.md
02_basic/: index.md
03_robust/: index.md
04_hypotest/: index.md
05_largenum/: index.md
06_nonpar/: index.md
bibliography/: index.md
docs/: index.html
docs/01_intro/: index.html
docs/02_basic/: index.html
docs/03_robust/: index.html
docs/04_hypotest/: index.html
docs/05_largenum/: index.html
docs/06_nonpar/: index.html
docs/author/: index.html
docs/basics/: index.html
docs/bib/: index.html
docs/bibliography/: index.html
docs/colophon/: index.html
docs/conclusion/: index.html
docs/conduct/: index.html
docs/contents/: index.html
docs/contrib/: index.html
docs/contributing/: index.html
docs/credits/: index.html
docs/finale/: index.html
docs/glossary/: index.html
docs/hyptest/: index.html
docs/intro/: boxplot.py  index.html
docs/introduction/: index.html
docs/large/: index.html
docs/license/: index.html
docs/nonpar/: index.html
docs/robust/: index.html  version-histogram.py  version-other-plots.py  version-statistics.out  version-statistics.sh
docs/syllabus/: index.html
docs/theory/: index.html
docs/tools/: index.html
en/: README.md  config.py
info/: bibliography.bib  dedication.tex  glossary.yml  links.yml
src/: index.md
src/finale/: index.md
src/intro/: index.md  percentiles.py  prechelt_key.tbl
templates/: page.html
theory/: index.md
tmp/: bibliography.html
(+21 files in other folders)
