[project]
name = "ds4se"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "linkchecker",
    "mccole"
]

[tool.mccole]
skips = [
    "*/data/*",
    "*.csv",
    "*.js",
    "*.py",
    "*.sh",
    "*.tbl",
    "*.txt",
    "*.xlsx",
    "extras/**",
    "unused/**",
    "uv.lock"
]

[tool.mccole.renames]
"README.md" = ""
"CODE_OF_CONDUCT.md" = "conduct"
"CONTRIBUTING.md" = "contrib"
"LICENSE.md" = "license"
